crates/toml_edit/tests/snapshots/invalid/table/append-with-dotted-keys-07.stderr
TOML parse error at line 1, column 14
  |
1 | a = {k1 = 1, k1.name = "joe"}
  |              ^^
cannot extend value of type integer with a dotted key
